# aztea-stock

./: .gitignore  README.md  app_ges_com.md
api/: Cargo.toml  Makefile  README.md  docker-compose.yml
api/migrations/: 20260519000000_init.down.sql  20260519000000_init.sql  20260519000001_add_is_system_to_tenants.down.sql  20260519000001_add_is_system_to_tenants.sql  20260519000002_add_two_factor_auth.down.sql  20260519000002_add_two_factor_auth.sql  20260519000003_add_smtp_to_tenants.down.sql  20260519000003_add_smtp_to_tenants.sql  20260519000004_add_subscriptions_licenses.down.sql  20260519000004_add_subscriptions_licenses.sql  20260520000000_add_max_devices_to_subscriptions.down.sql  20260520000000_add_max_devices_to_subscriptions.sql  20260520000001_create_categories.sql  20260520000002_add_is_active_to_categories.down.sql  20260520000002_add_is_active_to_categories.sql  20260520000003_create_products.sql  20260520000004_create_stock_items.sql  20260520000005_create_stock_movements.sql  20260520000006_create_sales_purchases_alerts.down.sql  20260520000006_create_sales_purchases_alerts.sql  20260521075754_add_export_permissions.down.sql  20260521075754_add_export_permissions.sql  20260524120000_add_city_to_tenants.down.sql  20260524120000_add_city_to_tenants.sql  20260524200000_fix_price_monthly_real.down.sql  20260524200000_fix_price_monthly_real.sql  20260524210000_add_country_code_to_tenants.down.sql  20260524210000_add_country_code_to_tenants.sql  20260525000000_add_unique_name_constraints.down.sql  20260525000000_add_unique_name_constraints.sql  20260525000001_fix_stock_items_column_name.down.sql  20260525000001_fix_stock_items_column_name.sql  20260529000000_fix_decimal_to_double.sql  20260529000002_fix_movements_decimal.sql  20260529141400_add_status_to_licenses.sql  20260529143000_update_subscription_status_constraint.down.sql  20260529143000_update_subscription_status_constraint.sql  20260529151245_add_expires_at_to_licenses.down.sql  20260529151245_add_expires_at_to_licenses.sql
api/src/: config.rs  db.rs  errors.rs  main.rs
api/src/controllers/: category_controller.rs  gescom_controller.rs  license_controller.rs  mod.rs  permission_controller.rs  product_controller.rs  role.rs  role_controller.rs  stock_controller.rs  subscription_controller.rs  tenant_controller.rs  user_controller.rs
api/src/database/: mod.rs
api/src/dtos/: category_dto.rs  create_role_dto.rs  gescom_dto.rs  license_dto.rs  mod.rs  product_dto.rs  response_role_dto.rs  stock_dto.rs  subscription_dto.rs  tenant_dto.rs  update_role_dto.rs  user_dto.rs
api/src/middleware/: auth.rs  license_guard.rs  mod.rs
api/src/models/: alerts.rs  category.rs  license.rs  mod.rs  permission.rs  product.rs  purchase_items.rs  purchases.rs  role.rs  role_permission.rs  sale_items.rs  sales.rs  stock_item.rs  stock_movement.rs  subscription.rs  sync_log.rs  tenant.rs  user.rs  user_role.rs
api/src/repositories/: category_repository.rs  gescom_repository.rs  mod.rs  (+5 more)
(+143 files in other folders)
