[package]
name = "api"
version = "0.1.0"
edition = "2024"
default-run = "api"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "sqlite", "any", "runtime-tokio-rustls", "uuid", "chrono", "rust_decimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
redis = { version = "0.27", features = ["tokio-comp"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
rand = "0.8"
urlencoding = "2.1"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }

# Swagger UI / OpenAPI documentation
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
base64 = "0.22"

[dev-dependencies]
http-body-util = "0.1"
